--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@sudoo/extract": "^1.2.1",
     "@sudoo/io": "^1.6.1",
     "@sudoo/log": "^1.2.2",
-    "connor": "^2.6.0"
+    "connor": "^2.6.0",
+    "showdown": "^1.9.0"
   },
   "devDependencies": {
     "@sudoo/mock": "^1.2.0",
     "@sudoo/triforce": "^1.8.3",
-    "@types/express": "^4.17.1"
+    "@types/express": "^4.17.1",
+    "@types/showdown": "^1.9.3"
   },
   "nyc": {
     "extension": [
