--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "chaetodon",
         "codecov",
         "connor",
+        "downlevel",
         "repo",
         "sparidae",
         "splited",
