--- a/typescript/tsconfig.build.json
+++ b/typescript/tsconfig.build.json
@@ -15,12 +15,12 @@
         "noImplicitAny": true,
         "noImplicitReturns": true,
         "noImplicitThis": true,
-        "outDir": "../dist",
+        "outDir": "../app",
         "removeComments": true,
         "resolveJsonModule": true,
         "strict": true,
         "strictNullChecks": true,
-        "target": "es5",
+        "target": "es5"
     },
     "exclude": [
         "node_modules",
