--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@sudoo/io": "^1.6.1",
     "@sudoo/log": "^1.2.2",
     "connor": "^2.6.0",
+    "ejs": "^2.7.1",
     "showdown": "^1.9.0"
   },
   "devDependencies": {
     "@sudoo/mock": "^1.2.0",
     "@sudoo/triforce": "^1.8.3",
+    "@types/ejs": "^2.6.3",
     "@types/express": "^4.17.1",
     "@types/showdown": "^1.9.3"
   },
