implement private feature

--- a/example/config.json
+++ b/example/config.json
@@ -22,6 +22,15 @@
         },
         {
             "categories": [
+                "introduction"
+            ],
+            "name": "private-hello",
+            "title": "Private Hello",
+            "path": "hello.md",
+            "private": true
+        },
+        {
+            "categories": [
                 "introduction",
                 "nested"
             ],
