--- a/example/config.json
+++ b/example/config.json
@@ -31,6 +31,17 @@
         },
         {
             "categories": [
+                "introduction"
+            ],
+            "name": "permission-hello",
+            "title": "Permission Hello",
+            "path": "hello.md",
+            "groups": [
+                "BRONTOSAURUS_SELF_CONTROL"
+            ]
+        },
+        {
+            "categories": [
                 "introduction",
                 "nested"
             ],
