[feat] implement token verifying function

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/SudoDotDog/Brontosaurus-Library#readme",
   "dependencies": {
+    "@brontosaurus/node": "^2.0.0",
     "@sudoo/express": "^1.15.3",
     "@sudoo/extract": "^1.2.1",
     "@sudoo/io": "^1.6.1",
