add config verify function

--- a/example/config.json
+++ b/example/config.json
@@ -1,6 +1,7 @@
 {
     "title": "Brontosaurus Library Example",
     "basePath": ".",
+    "index": "hello.md",
     "categories": [
         {
             "name": "introduction",
