implement favicon feature

--- a/example/config.json
+++ b/example/config.json
@@ -1,5 +1,6 @@
 {
     "title": "Brontosaurus Library Example",
+    "favicon": "https://raw.githubusercontent.com/SudoDotDog/Brontosaurus/master/icon/transparent/icon-512x512.png",
     "basePath": ".",
     "index": "hello.md",
     "categories": [
