implemnt render markdown function

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,9 @@
         "repo",
         "sparidae",
         "splited",
+        "strikethrough",
         "sudoo",
+        "tasklists",
         "triforce",
         "tshook",
         "xlink",
