--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
     "cSpell.words": [
+        "Heiti",
+        "Hiragino",
         "Loggable",
+        "Quan",
         "RMRF",
         "WMXPY",
+        "Yahei",
         "bwnl",
         "chaetodon",
         "codecov",
