--- a/example/config.json
+++ b/example/config.json
@@ -45,6 +45,7 @@
             "name": "permission-hello",
             "title": "Permission Hello",
             "path": "hello.md",
+            "private": true,
             "groups": [
                 "BRONTOSAURUS_SELF_CONTROL"
             ]
@@ -57,6 +58,7 @@
             "name": "permission-hello-more",
             "title": "Permission Hello More",
             "path": "hello.md",
+            "private": true,
             "groups": [
                 "BRONTOSAURUS_SELF_CONTROL_MORE"
             ]
@@ -79,7 +81,8 @@
             "name": "private-hello",
             "title": "Private Hello",
             "path": "hello.md",
-            "private": true
+            "private": true,
+            "groups": []
         }
     ]
 }
