--- a/example/config.json
+++ b/example/config.json
@@ -13,6 +13,10 @@
             "title": "Nested"
         },
         {
+            "name": "private",
+            "title": "Private"
+        },
+        {
             "name": "hidden",
             "title": "Hidden"
         }
@@ -73,7 +77,7 @@
         },
         {
             "categories": [
-                "hidden"
+                "private"
             ],
             "author": "joshua",
             "name": "private-hello",
