--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@sudoo/magic": "^1.2.0",
     "connor": "^2.6.1",
     "ejs": "^3.0.1",
+    "js-yaml": "^3.13.1",
     "showdown": "^1.9.1"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "@sudoo/triforce": "^2.0.4",
     "@types/ejs": "^2.7.0",
     "@types/express": "^4.17.2",
+    "@types/js-yaml": "^3.12.1",
     "@types/showdown": "^1.9.3"
   },
   "nyc": {
