fix test related

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "codecov",
         "connor",
         "downlevel",
+        "mocharc",
         "repo",
         "sparidae",
         "splited",
