fix linting issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "WMXPY",
         "Yahei",
         "bwnl",
+        "camelcase",
         "chaetodon",
         "codecov",
         "connor",
