--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@sudoo/io": "^1.8.0",
     "@sudoo/log": "^1.4.1",
     "@sudoo/magic": "^1.8.0",
+    "@sudoo/pattern": "^1.4.1",
+    "@sudoo/verify": "^1.15.0",
     "connor": "^2.7.0",
     "ejs": "^3.1.3",
     "js-yaml": "^3.14.0",
