--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "showdown": "^1.9.1"
   },
   "devDependencies": {
+    "@sudoo/build-utils": "^1.0.0",
     "@sudoo/mock": "^1.5.0",
     "@sudoo/triforce": "^2.9.28",
     "@types/ejs": "^3.0.7",
