--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "@sudoo/triforce": "^2.9.28",
     "@types/ejs": "^3.0.7",
     "@types/js-yaml": "^4.0.2",
-    "@types/showdown": "^1.9.4"
+    "@types/showdown": "^1.9.4",
+    "ts-node": "^10.1.0"
   },
   "nyc": {
     "extension": [
